Added expirience and responsive design

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,12 @@
-<header class="flex justify-between items-center py-6 w-[1120px]">
-  <img class="rounded-full w-12 h-12" src="/logo.jpg" alt="photo" />
+<header class="flex justify-between items-center py-6 w-full xl:w-[1120px] mx-auto">
+  <img class="rounded-full size-12" src="/logo.jpg" alt="aleDev-logo" />
   <nav>
-    <ul class="flex flex-row gap-x-10">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/contact">Contact</a></li>
+    <ul class="flex flex-row gap-x-10 opacity-80">
+      <li><a href="/">Home</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </header>
