--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,109 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import Badge from "../components/Badge.astro";
+import LinkedInIcon from "../components/icons/LinkedIn.astro";
+import GitHubIcon from "../components/icons/GitHub.astro";
+import InfoJobsIcon from "../components/icons/InfoJobs.astro";
+import CodeIcon from "../components/icons/Code.astro";
+import BriefCaseIcon from "../components/icons/BriefCase.astro";
+import MailIcon from "../components/icons/Mail.astro";
+import SocialContainer from "../components/SocialContainer.astro";
+import Experience from "../components/Experience.astro";
+import Projects from "../components/Projects.astro";
+import SectionContainer from "../components/SectionContainer.astro";
+import GitHub from "../components/icons/GitHub.astro";
+import InfoJobs from "../components/icons/InfoJobs.astro";
+
+const MAIL = "alecuba96@gmail.com";
+const yearsOfExpertise = calculateAge(new Date(2018, 8, 1));
+const SOCIALPROFILES = [
+  {
+    href: ``,
+    name: "LinkedIn",
+    icon: LinkedInIcon,
+  },
+  {
+    href: ``,
+    name: "GitHub",
+    icon: GitHubIcon,
+  },
+  {
+    href: ``,
+    name: "InfoJobs",
+    icon: InfoJobsIcon,
+  },
+  {
+    href: `mailto:${MAIL}`,
+    name: MAIL,
+    icon: MailIcon,
+  },
+];
+
+function calculateAge(bornDate: Date) {
+  bornDate = new Date(bornDate);
+  var actualDate = new Date();
+
+  var years = actualDate.getFullYear() - bornDate.getFullYear();
+
+  if (
+    actualDate.getMonth() < bornDate.getMonth() ||
+    (actualDate.getMonth() == bornDate.getMonth() &&
+      actualDate.getDate() < bornDate.getDate())
+  ) {
+    years--;
+  }
+
+  return years;
+}
 ---
 
-<Layout title="Welcome to AleDev.">
-  <main></main>
+<Layout
+  title="Resume of AleDev. Desarrollador y Programador Web"
+  description=`Contrata a AleDev. Desarrollador y Programador Web con ${yearsOfExpertise} años de experiencia y sumando.`
+>
+  <main class="px-4">
+    <SectionContainer class="pt-44 pb-24">
+      <h1
+        class="text-black flex text-3xl md:text-4xl lg:text-5xl font-bold flex-row gap-x-4 pb-4"
+      >
+        Hi, I am Alejandro<div class="flex justify-center items-center">
+          <a class="flex" href={`mailto:${MAIL}`}>
+            <Badge>Available for hire</Badge>
+          </a>
+        </div>
+      </h1>
+      <h2 class="lg:text-2xl text-xl opacity-50 pb-2 text-wrap max-w-[700px]">
+        <span class="text-blue-600/80"
+          >{yearsOfExpertise} años de experiencia</span
+        > en Desarrollo Web<span class="text-blue-600/80"> y sumando.</span>
+        <!-- De Madrid, España 🇪🇸. Me especializo en el frontend. -->
+      </h2>
+      <nav class="flex gap-x-4 gap-y-2 flex-wrap">
+        {
+          SOCIALPROFILES.map((profile) => (
+            <SocialContainer href={profile.href}>
+              <profile.icon class="size-5 rounded-md" /> {profile.name}
+            </SocialContainer>
+          ))
+        }
+      </nav>
+    </SectionContainer>
+    <SectionContainer id="experience">
+      <h2
+        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
+      >
+        <BriefCaseIcon class="size-6" />Experiencia Laboral
+      </h2>
+      <Experience />
+    </SectionContainer>
+    <SectionContainer id="projects">
+      <h2
+        class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
+      >
+        <CodeIcon class="size-6" />Projects
+      </h2>
+      <Projects />
+    </SectionContainer>
+  </main>
 </Layout>
