--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,5 +1,11 @@
-<span
-  class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
->
-  <slot />
+---
+interface Props {
+  text: string;
+  class: string;
+}
+const { text, class: className } = Astro.props;
+---
+
+<span class=` text-xs font-medium me-2 px-2.5 py-0.5 rounded ${className}`>
+  {text}
 </span>
