--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,38 @@
-<footer class="py-20"> Aqui va el footer</footer>
+---
+const getYear = () => {
+  let date = new Date();
+  return date.getFullYear();
+};
+const YEAR = getYear();
+---
+
+<footer
+  class="bg-white rounded-lg m-4 dark:bg-gray-800 w-full xl:w-[1120px] mx-auto"
+>
+  <div
+    class="flex items-center justify-between py-6 w-full mx-auto max-w-screen-xl px-4 gap-x-4"
+  >
+    <span class="text-sm text-center text-gray-500 dark:text-gray-400 border-2 rounded-full w-[150px] py-1 px-2"
+      >© {YEAR} AleDev
+    </span>
+    <ul
+      class="flex items-center font-medium text-gray-500 dark:text-gray-400 gap-x-10"
+    >
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="#experience">Experience</a>
+      </li>
+      <li>
+        <a href="#projects">Projects</a>
+      </li>
+      <li>
+        <a href="#about">About</a>
+      </li>
+      <li>
+        <a href="#contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</footer>
