--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header class="flex justify-between items-center py-6 w-full xl:w-[1120px] mx-auto">
-  <img class="rounded-full size-12" src="/logo.jpg" alt="aleDev-logo" />
+  <img class="rounded-full size-12 border-2 border-black" src="/logo.svg" alt="aleDev-logo" />
   <nav>
     <ul class="flex flex-row gap-x-10 opacity-80">
       <li><a href="/">Home</a></li>
