--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,6 +62,13 @@ const { title, description } = Astro.props;
       align-items: center;
     }
   }
+  footer ul {
+    /* width: inherit; */
+    overflow: auto;
+    height: 48px;
+    display: flex;
+    align-items: center;
+  }
 
   /* @media (prefers-reduced-animation: reduce) {
     body {
