--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,22 @@ import InfoJobs from "../components/icons/InfoJobs.astro";
 
 const MAIL = "alecuba96@gmail.com";
 const yearsOfExpertise = calculateAge(new Date(2018, 8, 1));
+export const STATUS = {
+  AVAILABLE: {
+    text: "Available for hire",
+    class: "bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300",
+  },
+  LISTING: {
+    text: "Listening to offers",
+    class:
+      "bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300 ",
+  },
+  WORKING: {
+    text: "Working",
+    class: "bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-300 ",
+  },
+};
+
 const SOCIALPROFILES = [
   {
     href: ``,
@@ -63,13 +79,16 @@ function calculateAge(bornDate: Date) {
   description=`Contrata a AleDev. Desarrollador y Programador Web con ${yearsOfExpertise} años de experiencia y sumando.`
 >
   <main class="px-4">
-    <SectionContainer class="pt-44 pb-24">
+    <SectionContainer class="lg:pt-44 pt-24 lg:pb-24 pb-12">
       <h1
         class="text-black flex text-3xl md:text-4xl lg:text-5xl font-bold flex-row gap-x-4 pb-4"
       >
         Hi, I am Alejandro<div class="flex justify-center items-center">
           <a class="flex" href={`mailto:${MAIL}`}>
-            <Badge>Available for hire</Badge>
+            <Badge
+              text={STATUS.AVAILABLE.text}
+              class={STATUS.AVAILABLE.class}
+            />
           </a>
         </div>
       </h1>
@@ -89,7 +108,7 @@ function calculateAge(bornDate: Date) {
         }
       </nav>
     </SectionContainer>
-    <SectionContainer id="experience">
+    <SectionContainer id="experience" class="mb-24">
       <h2
         class="opacity-70 text-2xl font-semibold mb-6 flex flex-row items-center gap-x-2"
       >
