--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,18 +6,19 @@ const EXPERIENCE = [
     date: "Enero 2019 - Septiembre 2023",
     name: "Profesor in Universidad de Matanzas.",
     description:
-      "Impartí clases de Programación Web e Inteligencia Artificial y estuve vinculado al desarrollo de varios proyectos en estas ramas.",
+      "Impartí clases de Programación Web e Inteligencia Artificial, dos campos fascinantes y en constante evolución. Durante este tiempo, no sólo enseñé, sino que también aprendí mucho de mis estudiantes, lo que me permitió crecer tanto personal como profesionalmente. Además de mi labor docente, estuve activamente involucrado en el desarrollo de varios proyectos innovadores en estas áreas. Esta experiencia me permitió aplicar y ampliar mis conocimientos teóricos, al tiempo que me brindó la oportunidad de contribuir al avance de estas disciplinas. Mi participación en estos proyectos ha sido una parte integral de mi carrera y ha reforzado mi pasión por la enseñanza y el desarrollo.",
   },
   {
     date: "Septiembre 2019 - Octubre 2019",
     name: "Developer and designer in AMB Septic Tank web.",
     description:
-      "Se diseñó y desarrolló la web de un negocio séptico en Miami, Florida. Una web estática y simple que ayudo a darle un impulso al negocio.",
+      "Tuve la oportunidad de diseñar y desarrollar el sitio web para un próspero negocio séptico ubicado en Miami, Florida. A pesar de ser una web estática y simple, su diseño intuitivo y fácil de navegar resultó ser un activo valioso para el negocio. Este proyecto no sólo mejoró la visibilidad online del negocio, sino que también impulsó su alcance a un público más amplio. La implementación de este sitio web marcó un hito en la trayectoria del negocio, proporcionándole un impulso significativo. Mi contribución al éxito de este negocio a través del diseño y desarrollo web ha sido una experiencia gratificante y enriquecedora.",
   },
   {
     date: "Septiembre 2020 - Actualidad",
     name: "Developer in Green Island Solution",
-    description: "Developer  description ...",
+    description:
+      "Actualmente me desempeño como desarrollador frontend en una prestigiosa empresa que proporciona servicios a PartsBase Inc., una reconocida corporación con sede en Norteamérica. Mi papel principal es crear y optimizar interfaces de usuario atractivas y funcionales. Trabajando en estrecha colaboración con PartsBase Inc., nos esforzamos por mejorar continuamente la experiencia del usuario, lo que a su vez nos ayuda a mantener la posición como líder en nuestro campo.",
   },
 ];
 ---
