--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,14 +12,15 @@ const YEAR = getYear();
   <div
     class="flex items-center justify-between py-6 w-full mx-auto max-w-screen-xl px-4 gap-x-4"
   >
-    <span class="text-sm text-center text-gray-500 dark:text-gray-400 border-2 rounded-full w-[150px] py-1 px-2"
+    <span
+      class="text-sm text-center text-blue-600/80 dark:text-gray-400 border-blue-600/80 border-2 rounded-full w-[150px] py-1 px-2"
       >© {YEAR} AleDev
     </span>
     <ul
       class="flex items-center font-medium text-gray-500 dark:text-gray-400 gap-x-10"
     >
       <li>
-        <a href="/">Home</a>
+        <a href="#start">Home</a>
       </li>
       <li>
         <a href="#experience">Experience</a>
