--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
-<header class="flex justify-between items-center py-6 w-full xl:w-[1120px] mx-auto">
+<header id="start" class="flex justify-between items-center py-6 w-full xl:w-[1120px] mx-auto">
   <img class="rounded-full size-12 border-2 border-black" src="/logo.svg" alt="aleDev-logo" />
   <nav>
     <ul class="flex flex-row gap-x-10 opacity-80">
-      <li><a href="/">Home</a></li>
+      <li><a href="#start">Home</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#about">About</a></li>
