--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,6 +8,7 @@ import TailwindIcon from "./icons/Tailwind.astro";
 import TypeScriptIcon from "./icons/TypeScript.astro";
 import RapidApiIcon from "./icons/RapidApi.astro";
 import JavaScriptIcon from "./icons/JavaScript.astro";
+import LinkIcon from "./icons/Link.astro";
 import GitHubBtn from "./GitHubBtn.astro";
 const TAGS = {
   HTML: {
@@ -110,13 +111,52 @@ const PROJECTS = [
           </li>
         ))}
       </ul>
-      <a href={link} target="_blank">
-        <img
-          class="rounded shadow-2xl shadow-black/50 "
-          src={image}
-          alt={`Screenshot project ${title}`}
-        />
+      <a href={link} class="image-link" target="_blank" aria-label={`Visit the ${title} website - Opens in a new tab`} >
+        <div class="image" data-label="&raquo;">
+          <img
+            class="rounded shadow-2xl shadow-black/50 "
+            src={image}
+            alt={`Screenshot project ${title}`}
+          />
+        </div>
       </a>
+      <style>
+
+        .image{
+          position: relative;
+          transition: 0.6s;
+        }
+        .image::before {
+            position: absolute;
+            content: attr(data-label);
+            font-size: 44px;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            color: white;
+            background: rgba(0, 0, 0, 0.6);
+            opacity: 0;
+            transition: 0.4s;
+        }
+
+        .image-link:hover .image {
+            transform: scale(1.05);
+        }
+
+        .image-link:hover .image::before {
+            opacity: 1;
+        }
+
+        .images img {
+            height: 250px;
+            transform: translateY(102%);
+        }
+      </style>
     </article>
   ))
 }
