--- a/src/components/icons/Phone.astro
+++ b/src/components/icons/Phone.astro
@@ -1,7 +1,7 @@
 <svg
   {...Astro.props}
   xmlns="http://www.w3.org/2000/svg"
-  class="icon icon-tabler icon-tabler-share-3"
+  class="icon icon-tabler icon-tabler-phone"
   width="24"
   height="24"
   viewBox="0 0 24 24"
@@ -11,6 +11,6 @@
   stroke-linecap="round"
   stroke-linejoin="round"
   ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-    d="M13 4v4c-6.575 1.028 -9.02 6.788 -10 12c-.037 .206 5.384 -5.962 10 -6v4l8 -7l-8 -7z"
-  ></path></
+    d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
+  ></path></svg
 >
