--- a/src/components/icons/User.astro
+++ b/src/components/icons/User.astro
@@ -1,16 +1,16 @@
 <svg
   {...Astro.props}
   xmlns="http://www.w3.org/2000/svg"
-  class="icon icon-tabler icon-tabler-share-3"
+  class="icon icon-tabler icon-tabler-user"
   width="24"
   height="24"
   viewBox="0 0 24 24"
-  stroke-width="2"
+  stroke-width="3"
   stroke="currentColor"
   fill="none"
   stroke-linecap="round"
   stroke-linejoin="round"
   ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-    d="M13 4v4c-6.575 1.028 -9.02 6.788 -10 12c-.037 .206 5.384 -5.962 10 -6v4l8 -7l-8 -7z"
-  ></path></
+    d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path><path
+    d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path></svg
 >
