--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -7,17 +7,35 @@ interface Props {
 const { date, description, name } = Astro.props;
 ---
 
+<style>
+  .fadein-animation {
+    animation: experience-fadein linear both;
+    animation-timeline: view();
+    animation-range: entry 10% cover 20%;
+  }
+  @keyframes experience-fadein {
+    from {
+      opacity: 0;
+      transform: translateX(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX();
+    }
+  }
+</style>
+
 <div
   class="absolute w-3 h-3 bg-blue-600/80 opacity-50 rounded-full mt-1.5 -start-1.5 border border-white dark:border-blue-600/80 dark:bg-blue-600/8dark:border-blue-600/80"
 >
 </div>
 <time
-  class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+  class="fadein-animation mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
   >{date}</time
 >
-<h3 class="opacity-80 text-lg font-semibold text-gray-900 dark:text-white">
+<h3 class="fadein-animation opacity-80 text-lg font-semibold text-gray-900 dark:text-white">
   {name}
 </h3>
-<p class="text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
+<p class="fadein-animation text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
   {description}
 </p>
