--- a/src/components/GitHubBtn.astro
+++ b/src/components/GitHubBtn.astro
@@ -8,7 +8,7 @@ const { href } = Astro.props;
 <a
   href={href}
   target="_blank"
-  class="max-h-[40px] w-[197px] text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30"
+  class="hover:scale-105 transition min-w-[182px] max-h-[40px] w-[197px] text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30"
 >
   <svg
     class="w-4 h-4 me-2"
