--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,8 +8,7 @@ import TailwindIcon from "./icons/Tailwind.astro";
 import TypeScriptIcon from "./icons/TypeScript.astro";
 import RapidApiIcon from "./icons/RapidApi.astro";
 import JavaScriptIcon from "./icons/JavaScript.astro";
-import LinkIcon from "./icons/Link.astro";
-import GitHubBtn from "./GitHubBtn.astro";
+import ProjectItem from "./ProjectItem.astro";
 const TAGS = {
   HTML: {
     name: "HTML 5",
@@ -87,76 +86,4 @@ const PROJECTS = [
 ];
 ---
 
-{
-  PROJECTS.map(({ title, description, tags, image, github, link }) => (
-    <article class="mb-20">
-      <div class="flex gap-y-2 lg:flex-row flex-col lg:place-content-between mb-2">
-        <a href={link} target="_blank" class="flex items-center">
-          <h3 class="text-2xl font-semibold text-blue-600/80 opacity-70 ">
-            {title}
-          </h3>
-        </a>
-        <GitHubBtn href={github} />
-      </div>
-      <p class="text-lg mb-4 text-pretty">{description}</p>
-      <ul class="flex gap-x-2 gap-y-2 flex-row flex-wrap mb-4">
-        {tags.map((tag) => (
-          <li>
-            <span
-              class={`items-center bg-white flex gap-x-1 rounded-full text-sm py-1 px-2 border-2 ${tag.class}`}
-            >
-              <tag.icon class="size-4" />
-              {tag.name}
-            </span>
-          </li>
-        ))}
-      </ul>
-      <a href={link} class="image-link" target="_blank" aria-label={`Visit the ${title} website - Opens in a new tab`} >
-        <div class="image" data-label="&raquo;">
-          <img
-            class="rounded shadow-2xl shadow-black/50 "
-            src={image}
-            alt={`Screenshot project ${title}`}
-          />
-        </div>
-      </a>
-      <style>
-
-        .image{
-          position: relative;
-          transition: 0.6s;
-        }
-        .image::before {
-            position: absolute;
-            content: attr(data-label);
-            font-size: 44px;
-            top: 0;
-            left: 0;
-            z-index: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            color: white;
-            background: rgba(0, 0, 0, 0.6);
-            opacity: 0;
-            transition: 0.4s;
-        }
-
-        .image-link:hover .image {
-            transform: scale(1.05);
-        }
-
-        .image-link:hover .image::before {
-            opacity: 1;
-        }
-
-        .images img {
-            height: 250px;
-            transform: translateY(102%);
-        }
-      </style>
-    </article>
-  ))
-}
+{PROJECTS.map((project) => <ProjectItem project={project} />)}
