added contact me functionality

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,9 +13,12 @@
   Me gradué en Ingeniería Informática en 2020 de la Universidad de Matanzas
   Camilo Cienfuegos. Durante mis estudios, obtuve excelentes resultados
   académicos que me permitieron participar en numerosos proyectos y prácticas
-  profesionales. Mi rendimiento destacado me valió el honor de ser seleccionado
-  como el mejor estudiante de mi carrera, y fui invitado a unirme a la Unión de
-  Informáticos de Cuba (UIC).
+  profesionales. Un hito de mi carrera académica fue la publicación de
+  mi tesis para optar por el título de Ingeniero Informático en una prestigiosa
+  revista científica por su impacto en el área aplicada, lo cual refleja mi
+  compromiso con la investigación y la innovación. Mi rendimiento destacado me
+  valió el honor de ser seleccionado como el mejor estudiante de mi carrera, y
+  fui invitado a unirme a la Unión de Informáticos de Cuba (UIC).
 </p><br />
 <p class="text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
   Mi idioma nativo es el español, y también tengo un nivel básico de inglés. Mi
