--- a/src/components/ProjectItem.astro
+++ b/src/components/ProjectItem.astro
@@ -54,7 +54,7 @@ const { title, description, tags, image, github, link } = Astro.props.project;
   <div class="flex gap-y-2 lg:flex-row flex-col lg:place-content-between mb-2">
     <a href={link} target="_blank" class="flex items-center">
       <h3
-        class="text-2xl flex gap-x-2 items-center font-semibold text-blue-600/80 opacity-70"
+        class="text-2xl flex gap-x-2 items-center font-semibold text-blue-600/80 opacity-70 text-pretty"
       >
         <!-- <LinkIcon/> -->
         {title}
