--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,11 +2,11 @@
   <img class="rounded-full size-12 border-2 border-black" src="/logo.svg" alt="aleDev-logo" />
   <nav>
     <ul class="flex flex-row gap-x-10 opacity-80">
-      <li><a href="#start">Home</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li class="hover:scale-125 transition"><a href="#start">Home</a></li>
+      <li class="hover:scale-125 transition"><a href="#experience">Experience</a></li>
+      <li class="hover:scale-125 transition"><a href="#projects">Projects</a></li>
+      <li class="hover:scale-125 transition"><a href="#about">About</a></li>
+      <li class="hover:scale-125 transition"><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </header>
