--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -71,7 +71,8 @@ const { mail, phone } = Astro.props;
 <script is:inline src="https://smtpjs.com/v3/smtp.js"></script>
 
 <script is:inline>
-  const sendEmail = () => {
+  const sendEmail = (event) => {
+    event.preventDefault();
     document.getElementById("myForm").style.animationPlayState = "running";
     Email.send({
       SecureToken: "f75c716b-d4c4-4086-ab80-484cee199b3d",
@@ -105,7 +106,7 @@ const { mail, phone } = Astro.props;
   ¡Gracias por contactarme!
 </div>
 
-<form id="myForm" class="mb-6" onsubmit="sendEmail(); reset(); return false;">
+<form id="myForm" class="mb-6" onsubmit="sendEmail(event); reset(); return false;">
   <div class="mb-6">
     <label
       for="email"
@@ -148,7 +149,6 @@ const { mail, phone } = Astro.props;
   </div>
   <button
     type="submit"
-    onsubmit="sendEmail();reset(); return false;"
     class="text-white bg-blue-600/80 hover:bg-blue-700/80 transition w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 block"
     >Send message</button
   >
