--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,40 @@
-<header id="start" class="flex justify-between items-center py-6 w-full xl:w-[1120px] mx-auto">
-  <img class="rounded-full size-12 border-2 border-black" src="/logo.svg" alt="aleDev-logo" />
+<style>
+  .smaller {
+    animation: smaller-animation linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 200px;
+  }
+  @keyframes smaller-animation {
+    0% {
+      height: 96px;
+      padding: 1.5rem 0.5rem;
+    }
+    100% {
+      height: 49px;
+      padding: 1rem 0.5rem 0.5rem;
+      box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    }
+  }
+</style>
+<header
+  id="start"
+  class="flex justify-between items-center py-6 w-full xl:w-[1120px] mx-auto fixed z-10 bg-white left-[50%] translate-x-[-50%] smaller"
+>
+  <img
+    class="rounded-full size-12 border-2 border-black"
+    src="/logo.svg"
+    alt="aleDev-logo"
+  />
   <nav>
     <ul class="flex flex-row gap-x-10 opacity-80">
       <li class="hover:scale-125 transition"><a href="#start">Home</a></li>
-      <li class="hover:scale-125 transition"><a href="#experience">Experience</a></li>
-      <li class="hover:scale-125 transition"><a href="#projects">Projects</a></li>
       <li class="hover:scale-125 transition"><a href="#about">About</a></li>
+      <li class="hover:scale-125 transition">
+        <a href="#experience">Experience</a>
+      </li>
+      <li class="hover:scale-125 transition">
+        <a href="#projects">Projects</a>
+      </li>
       <li class="hover:scale-125 transition"><a href="#contact">Contact</a></li>
     </ul>
   </nav>
