--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,33 +1,19 @@
+---
+import { t } from "i18next";
+---
+
 <h3 class="opacity-80 text-lg font-semibold text-gray-900 dark:text-white">
   Manuel Alejandro Naranjo Rey
 </h3><br />
 <p class="text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
-  Comencé mi viaje en el campo de la informática en 2014, explorando diversas
-  áreas antes de especializarme en desarrollo web (específicamente en el perfil
-  frontend) e inteligencia artificial (con un enfoque en machine learning).
-  Siempre he disfrutado enfrentándome a desafíos profesionales y buscando
-  soluciones innovadoras, y me enorgullece mi alto nivel de compromiso con las
-  tareas que se me asignan.
+  {t("about.first")}
 </p><br />
 <p class="text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
-  Me gradué en Ingeniería Informática en 2020 de la Universidad de Matanzas
-  Camilo Cienfuegos. Durante mis estudios, obtuve excelentes resultados
-  académicos que me permitieron participar en numerosos proyectos y prácticas
-  profesionales. Un hito de mi carrera académica fue la publicación de
-  mi tesis para optar por el título de Ingeniero Informático en una prestigiosa
-  revista científica por su impacto en el área aplicada, lo cual refleja mi
-  compromiso con la investigación y la innovación. Mi rendimiento destacado me
-  valió el honor de ser seleccionado como el mejor estudiante de mi carrera, y
-  fui invitado a unirme a la Unión de Informáticos de Cuba (UIC).
+  {t("about.second")}
 </p><br />
 <p class="text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
-  Mi idioma nativo es el español, y también tengo un nivel básico de inglés. Mi
-  dedicación y responsabilidad hacia mi trabajo, combinadas con mi pasión por la
-  informática, me han permitido obtener resultados exitosos en mis proyectos.
-  Siempre estoy dispuesto a aprender y adquirir nuevas habilidades para seguir
-  creciendo en mi carrera.
+  {t("about.third")}
 </p><br />
 <p class="text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
-  Espero tener la oportunidad de llevar mi experiencia y habilidades a un nuevo
-  desafío en el campo de la informática.
+  {t("about.fourth")}
 </p>
