--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,7 @@
 ---
 import MailIcon from "./icons/Mail.astro";
 import PhoneIcon from "./icons/Phone.astro";
+import { t } from "i18next";
 
 interface Props {
   mail: string;
@@ -69,11 +70,9 @@ const { mail, phone } = Astro.props;
 </style>
 
 <script is:inline src="https://smtpjs.com/v3/smtp.js"></script>
-
 <script is:inline>
   const sendEmail = (event) => {
     event.preventDefault();
-    document.getElementById("myForm").style.animationPlayState = "running";
     Email.send({
       SecureToken: "f75c716b-d4c4-4086-ab80-484cee199b3d",
       To: "alecuba96@gmail.com",
@@ -86,7 +85,7 @@ const { mail, phone } = Astro.props;
         document.getElementById("subject").value +
         " Message: " +
         document.getElementById("message").value,
-    }).then((message) => {
+    }).then(() => {
       document.getElementById("email").value = "";
       document.getElementById("subject").value = "";
       document.getElementById("message").value = "";
@@ -103,21 +102,25 @@ const { mail, phone } = Astro.props;
   id="notificationPopUp"
   class="w-[250px] sm:w-[340px] h-[50px] bg-blue-600/80 fixed bottom-[40px] right-[25px] justify-center items-center rounded-full text-white hidden"
 >
-  ¡Gracias por contactarme!
+  {t("contact.popUpMessage")}
 </div>
 
-<form id="myForm" class="mb-6" onsubmit="sendEmail(event); reset(); return false;">
+<form
+  id="contactForm"
+  class="mb-6"
+  onsubmit="sendEmail(event); reset(); return false;"
+>
   <div class="mb-6">
     <label
       for="email"
       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-      >Your email</label
+      >{t("contact.email")}</label
     >
     <input
       type="email"
       id="email"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      placeholder="name@company.com"
+      placeholder={t("contact.emailPlaceholder")}
       required
     />
   </div>
@@ -125,13 +128,13 @@ const { mail, phone } = Astro.props;
     <label
       for="subject"
       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-      >Subject</label
+      >{t("contact.subject")}</label
     >
     <input
       type="text"
       id="subject"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      placeholder="Let me know how I can help you"
+      placeholder={t("contact.subjectPlaceholder")}
       required
     />
   </div>
@@ -139,18 +142,18 @@ const { mail, phone } = Astro.props;
     <label
       for="message"
       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-      >Your message</label
+      >{t("contact.message")}</label
     >
     <textarea
       id="message"
       rows="4"
       class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      placeholder="Your message..."></textarea>
+      placeholder={t("contact.messagePlaceholder")}></textarea>
   </div>
   <button
     type="submit"
     class="text-white bg-blue-600/80 hover:bg-blue-700/80 transition w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 block"
-    >Send message</button
+    >{t("contact.submit")}</button
   >
 </form>
 <p class="mb-2 text-sm text-gray-500 dark:text-gray-400 w-fit vibrate-hover">
