--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -33,9 +33,13 @@ const { date, description, name } = Astro.props;
   class="fadein-animation mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
   >{date}</time
 >
-<h3 class="fadein-animation opacity-80 text-lg font-semibold text-gray-900 dark:text-white">
+<h3
+  class="fadein-animation opacity-80 text-lg font-semibold text-gray-900 dark:text-white"
+>
   {name}
 </h3>
-<p class="fadein-animation text-base font-normal text-gray-500 dark:text-gray-400 text-pretty">
+<p
+  class="fadein-animation text-base font-normal text-gray-500 dark:text-gray-400 text-pretty"
+>
   {description}
 </p>
