--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import { t } from "i18next";
 const getYear = () => {
   let date = new Date();
   return date.getFullYear();
@@ -17,22 +18,22 @@ const YEAR = getYear();
       >© {YEAR} AleDev
     </span>
     <ul
-      class="flex items-center font-medium text-gray-500 dark:text-gray-400 gap-x-10"
+      class="flex text-nowrap items-center font-medium text-gray-500 dark:text-gray-400 gap-x-10"
     >
-      <li >
-        <a href="#start">Home</a>
+      <li>
+        <a href="#start">{t("menu.home")}</a>
       </li>
-      <li >
-        <a href="#about">About</a>
+      <li>
+        <a href="#about">{t("menu.about")}</a>
       </li>
-      <li >
-        <a href="#experience">Experience</a>
+      <li>
+        <a href="#experience">{t("menu.experience")}</a>
       </li>
-      <li >
-        <a href="#projects">Projects</a>
+      <li>
+        <a href="#projects">{t("menu.projects")}</a>
       </li>
-      <li >
-        <a href="#contact">Contact</a>
+      <li>
+        <a href="#contact">{t("menu.contact")}</a>
       </li>
     </ul>
   </div>
