--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,23 +1,23 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Badge from "../components/Badge.astro";
-import LinkedInIcon from "../components/icons/LinkedIn.astro";
-import GitHubIcon from "../components/icons/GitHub.astro";
-import ResearchGateIcon from "../components/icons/ResearchGate.astro";
-import CodeIcon from "../components/icons/Code.astro";
-import BriefCaseIcon from "../components/icons/BriefCase.astro";
-import MailIcon from "../components/icons/Mail.astro";
-import ContactIcon from "../components/icons/Contact.astro";
-import UserIcon from "../components/icons/User.astro";
-import SocialContainer from "../components/SocialContainer.astro";
-import Experience from "../components/Experience.astro";
-import Projects from "../components/Projects.astro";
-import SectionContainer from "../components/SectionContainer.astro";
-import About from "../components/About.astro";
-import Contact from "../components/Contact.astro";
+import Layout from "../../layouts/Layout.astro";
+import Badge from "../../components/Badge.astro";
+import LinkedInIcon from "../../components/icons/LinkedIn.astro";
+import GitHubIcon from "../../components/icons/GitHub.astro";
+import ResearchGateIcon from "../../components/icons/ResearchGate.astro";
+import CodeIcon from "../../components/icons/Code.astro";
+import BriefCaseIcon from "../../components/icons/BriefCase.astro";
+import MailIcon from "../../components/icons/Mail.astro";
+import ContactIcon from "../../components/icons/Contact.astro";
+import UserIcon from "../../components/icons/User.astro";
+import SocialContainer from "../../components/SocialContainer.astro";
+import Experience from "../../components/Experience.astro";
+import Projects from "../../components/Projects.astro";
+import SectionContainer from "../../components/SectionContainer.astro";
+import About from "../../components/About.astro";
+import Contact from "../../components/Contact.astro";
 import { t, changeLanguage } from "i18next";
 
-changeLanguage("es");
+changeLanguage("en");
 
 const MAIL = "alecuba96@gmail.com";
 const PHONE = "+34 600 96 28 35";
@@ -118,14 +118,14 @@ function calculateAge(bornDate: Date) {
       font-family: monospace;
       white-space: nowrap;
       border-right: 2px solid transparent;
-      width: 50ch;
+      width: 52ch;
       overflow-x: hidden;
       overflow-y: visible;
 
       animation-timeline: view();
 
       animation:
-        typing 4s steps(50),
+        typing 4s steps(52),
         blink 0.5s 10 step-end alternate forwards;
 
       animation: name duration timing-function delay iteration-count direction
@@ -238,7 +238,7 @@ function calculateAge(bornDate: Date) {
         }
       </div>
       <h1
-        class="text-black sm:flex block text-2xl/[40px] sm:text-4xl/[50px] md:text-4xl/[70px] lg:text-5xl/[70px] font-bold flex-row gap-x-4 pb-4 whitespace-nowrap"
+        class="text-black sm:flex block text-3xl/[40px] sm:text-4xl/[50px] md:text-4xl/[70px] lg:text-5xl/[70px] font-bold flex-row gap-x-4 pb-4 whitespace-nowrap"
       >
         {t("site.presentation.title")}
         <div class="md:h-[70px] sm:h-[50px] h-[40px] overflow-hidden">
